--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,11 +1,11 @@
-/* 
+/**
 * @Author: Vixson
 * @Description: Unique and Very Responsive Admin Dashboard UI
 */
-@import 'bootstrap.css';
-@import 'fontawesome.css', 'animations.css', 'colors.css', 'app.css', 'pages.css', 'sidebar.css';
-
 @import 'variables';
+
+@import 'fontawesome.css','bootstrap.css';
+@import 'animations.css', 'colors.css', 'sizes.css', 'app.css', 'pages.css', 'sidebar.css';
 
 body {
   font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,9 +14,10 @@ body {
   font-size: $app-font-size;
 }
 
+
 @font-face {
   font-family: 'Montserrat';
-  src: url('fonts/Montserrat-Light.ttf');
+  src: url('/fonts/Montserrat-Light.ttf');
   font-weight: lighter;
 }
 
